Fix: Alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@ textarea,
 .ant-radio-group,
 .simplemde-editor-1-wrapper {
   margin: 2px !important;
+  width: 100%;
 }
 
 * {
